--- a/3.1_VA.Rmd
+++ b/3.1_VA.Rmd
@@ -223,76 +223,82 @@ Row {.tabset .tabset-fade .tabset-pills data-height="600"}
 
 ```{r}
 hchart(RNApop %>% filter (!is.na(REG) & !is.na(objr)) %>% 
-  group_by(REG,DEP) %>% summarise(asso=sum(total,na.rm = T)) %>%
-  left_join(.,basecom %>% group_by(DEP) %>% summarise(pop=sum(pop,na.rm=T)),by="DEP") %>%
-  left_join(.,appartenance %>% filter(NIVGEO=="DEP") %>%
-          select(CODGEO,département=LIBGEO),by=c("DEP"="CODGEO") )%>%
-    arrange(desc(asso)) %>%
-  #adorn_totals(name = "FR")%>%
-  mutate(txasso=asso*100/pop),
-  "bar",
-hcaes(x=reorder(département,asso),y=asso, color=ifelse(REG=="27","#6a5acd","#ffd700") ),
-name="nombre d'associations",showInlegend=T, pointWidth = 2 ) %>%
-   hc_xAxis(title=list(text="Départements")) %>%
+         group_by(REG,DEP) %>% 
+         summarise(asso=sum(total,na.rm = T)) %>%
+         left_join(.,basecom %>% group_by(DEP) %>% 
+                     summarise(pop=sum(pop,na.rm=T)),by="DEP") %>%
+         left_join(.,appartenance %>% filter(NIVGEO=="DEP") %>%
+                     select(CODGEO,département=LIBGEO),by=c("DEP"="CODGEO") )%>%
+         arrange(desc(asso)) %>%
+         mutate(txasso=asso*100/pop),  "bar",
+       hcaes(x=reorder(département,asso),y=asso, color=ifelse(REG=="27","#6a5acd","#ffd700") ),
+          name="Nombre d'associations",
+          showInLegend=T, 
+          pointWidth = 2 ) %>%
+  
+  hc_add_series(RNApop %>% filter (REG =="27" & !is.na(objr)) %>%
+                  group_by(REG,DEP) %>% 
+                  summarise(asso=sum(total,na.rm = T)) %>%
+                  left_join(.,basecom %>% group_by(DEP) %>% 
+                              summarise(pop=sum(pop,na.rm=T)),by="DEP") %>%
+                  left_join(.,appartenance %>% filter(NIVGEO=="DEP") %>%
+                              select(CODGEO,département=LIBGEO),by=c("DEP"="CODGEO") )%>%
+                  arrange(desc(asso)) %>%
+                  mutate(txasso=asso*100/pop),  "bar",
+                hcaes(x=reorder(département,asso),y=asso),
+                  color="#6a5acd",
+                  name="Nombre d'associations",
+                  showInLegend=F, 
+                  pointWidth = 2 ) %>%
+  
+    hc_legend(title=list(text=" France/BFC (Clic pour zoomer) " )) %>%
+
+    hc_xAxis(title=list(text="Départements")) %>%
     hc_yAxis(title=list(text="Nombre d'associations")) %>%
-  hc_add_theme(thm) 
+    hc_add_theme(thm) 
 ```
+
 ### Taux d'associations
 
 ```{r}
-hchart(RNApop %>% filter (!is.na(REG) & !is.na(objr)) %>% 
-  group_by(REG,DEP) %>% summarise(asso=sum(total,na.rm = T)) %>%
-  left_join(.,basecom %>% group_by(DEP) %>% summarise(pop=sum(pop,na.rm=T)),by="DEP") %>%
-    adorn_totals(name = "BFC")%>%
-left_join(.,appartenance %>% filter(NIVGEO=="DEP") %>%
-          select(CODGEO,département=LIBGEO),by=c("DEP"="CODGEO") )%>%
-  mutate(txasso=round(asso*100/pop,2 )) %>%
-  arrange(desc(txasso)),
-  "bar",
-hcaes(x=reorder(département,txasso),y=txasso,color=ifelse(REG=="27","#6a5acd",ifelse(REG=="FR","#ff7f50","#ffd700") ) ) ,
-      name="Taux d'association pour 100 habitants", showInlegend=T, pointWidth = 2  )%>%
-   hc_xAxis(title=list(text="Départements")) %>%
-    hc_yAxis(title=list(text="Taux d'associations")) %>%
-  hc_add_theme(thm) 
-```
-
-
-### Comparaisons infra-départementales
-
-```{r}
 hchart(RNApop %>% filter (!is.na(REG) & !is.na(objr)) %>%
-  group_by(REG,DEP) %>% filter(DEP %in% depbfc) %>%  summarise(asso=sum(total,na.rm = T)) %>%
-  left_join(.,basecom %>% group_by(DEP) %>% summarise(pop=sum(pop,na.rm=T)),by="DEP") %>%
-  left_join(.,appartenance %>% filter(NIVGEO=="DEP") %>%
-          select(CODGEO,département=LIBGEO),by=c("DEP"="CODGEO") )%>%
-    arrange(desc(asso)) %>%
-  #adorn_totals(name = "FR")%>%
-  mutate(txasso=asso*100/pop),
-  "bar",
-hcaes(x=reorder(département,asso),y=asso, color=ifelse(REG=="27","#6a5acd","#ffd700") ),
-name="nombre d'associations",showInlegend=T, pointWidth = 20 ) %>%
-   hc_xAxis(title=list(text="Départements")) %>%
-    hc_yAxis(title=list(text="Nombre d'associations")) %>%
-  hc_add_theme(thm) 
-```
-### Taux d'associations infra-départemental
+         group_by(DEP) %>% summarise(asso=sum(total,na.rm = T)) %>%
+         left_join(.,basecom %>% group_by(DEP) %>% 
+                     summarise(pop=sum(pop,na.rm=T)),by="DEP") %>%
+         adorn_totals(name = "FR")%>%
+         left_join(.,appartenance %>% filter(NIVGEO=="DEP") %>%
+                     select(CODGEO,département=LIBGEO),by=c("DEP"="CODGEO") )%>%
+         mutate(txasso=round(asso*100/pop,2 )) %>%
+         mutate(département=ifelse(DEP=="FR","France",département) )%>%
+         arrange(desc(txasso)),  "bar",
+       hcaes(x=reorder(département,txasso),y=txasso,color=ifelse(DEP %in% depbfc,"#6a5acd",
+                                                              ifelse(DEP=="FR","#ff7f50","#ffd700"))),
+        name="Taux d'association pour 100 habitants", 
+        showInLegend=T, 
+        pointWidth = 1  )%>%
+ 
+  hc_add_series(RNApop %>% filter (REG=="27" & !is.na(objr)) %>% 
+                  group_by(DEP) %>%  summarise(asso=sum(total,na.rm = T)) %>%
+                  left_join(.,basecom %>% group_by(DEP) %>% 
+                              summarise(pop=sum(pop,na.rm=T)),by="DEP") %>%
+                  adorn_totals(name = "BFC" )%>%
+                  left_join(.,appartenance %>% filter(NIVGEO=="DEP") %>%
+                              select(CODGEO,département=LIBGEO),by=c("DEP"="CODGEO") )%>%
+                  mutate(txasso=round(asso*100/pop,2 )) %>%
+                  arrange(desc(txasso)),  "bar",
+                hcaes(x=reorder(département,txasso),y=txasso,color=ifelse(DEP %in% depbfc,"#6a5acd",
+                                                              ifelse(DEP=="BFC","#ff7f50","#ffd700"))),
+                  name="Taux d'association pour 100 habitants", 
+                  showInLegend=F, 
+                  pointWidth = 1 ) %>%
+   
+    hc_legend(title=list(text=" France/BFC (Clic pour zoomer) " )) %>%
 
-```{r}
-hchart(RNApop %>% filter (!is.na(REG) & !is.na(objr)) %>% 
-  group_by(REG,DEP) %>% filter(DEP %in% depbfc) %>% summarise(asso=sum(total,na.rm = T)) %>%
-  left_join(.,basecom %>% group_by(DEP) %>% summarise(pop=sum(pop,na.rm=T)),by="DEP") %>%
-    adorn_totals(name = "BFC")%>%
-left_join(.,appartenance %>% filter(NIVGEO=="DEP") %>%
-          select(CODGEO,département=LIBGEO),by=c("DEP"="CODGEO") )%>%
-  mutate(txasso=round(asso*100/pop,2 )) %>%
-  arrange(desc(txasso)),
-  "bar",
-hcaes(x=reorder(département,txasso),y=txasso,color=ifelse(REG=="27","#6a5acd",ifelse(REG=="BFC","#ff7f50","#ffd700") ) ) ,
-      name="Taux d'association pour 100 habitants", showInlegend=T, pointWidth = 20  )%>%
-   hc_xAxis(title=list(text="Départements")) %>%
+    hc_xAxis(title=list(text="Départements")) %>%
     hc_yAxis(title=list(text="Taux d'associations")) %>%
-  hc_add_theme(thm) 
+    hc_add_theme(thm) 
 ```
+
 
 
 ### Carte départementale
