--- a/5.1_clubs.rmd
+++ b/5.1_clubs.rmd
@@ -345,21 +345,31 @@ La Nièvre et le Jura comptent plus de 10 clubs sportifs pour 10 000 habitants. 
 ```{r}
 clubdep <- as.data.frame(t(club_dep[118,4:99]))
 clubdep$departement <- t(as.data.frame(levels(club_dep)[4:99]))
-clubdep <- clubdep %>% rownames_to_column(var="dep") %>% mutate (dep=ifelse(nchar(dep)==1,paste0('0',dep),dep), V1=as.numeric(V1)) %>%
+clubdep <- clubdep %>% rownames_to_column(var="dep") %>% 
+                 mutate (dep=ifelse(nchar(dep)==1,paste0('0',dep),dep), V1=as.numeric(V1)) %>%
                  left_join(.,depwgs@data %>% dplyr::select(dep=INSEE_DEP,pop),by="dep" )    %>%
-  adorn_totals("row",name = "FR") %>%
+            adorn_totals("row",name = "FR") %>%
                   mutate(txclub=round(10000*V1/pop,1)) 
 clubdep[97,3] <- "France"
 
-hchart(clubdep %>% slice(-97) %>% arrange(desc(V1)),"bar", hcaes(x=reorder(departement,V1),y=V1,color=ifelse(dep %in% depbfc,"#6a5acd","#ffd700") ), 
-       showInLegend = T, name = "Clubs sportifs FR", pointWidth = 2) %>%
+hchart(clubdep %>% slice(-97) %>% arrange(desc(V1)),"bar",
+       hcaes(x=reorder(departement,V1),y=V1,color=ifelse(dep %in% depbfc,"#6a5acd","#ffd700") ),
+          showInLegend = T, 
+          name = "Nombre de clubs", 
+          pointWidth = 2) %>%
   
-    hc_add_series(clubdep %>% filter(dep %in% depbfc) %>% arrange(desc(V1)),"bar", hcaes(x=reorder(departement,V1),y=V1,color=ifelse(dep %in% depbfc,"#6a5acd","#ffd700") ), 
-       showInLegend = T, name = "Clubs sportifs BFC", pointWidth = 2) %>%
+    hc_add_series(clubdep %>% filter(dep %in% depbfc) %>% arrange(desc(V1)),"bar",
+                  hcaes(x=reorder(departement,V1),y=V1) ,
+                    color="#6a5acd" ,
+                    showInLegend = F, 
+                    name = "Nombre de clubs", 
+                    pointWidth = 2) %>%
+   
+    hc_legend(title=list(text=" France/BFC (Clic pour zoomer) " )) %>%
   
-  hc_xAxis(title=list(text="Départements")) %>%
-    hc_yAxis(title=list(text="Nombre de clubs")) %>%
-  hc_add_theme(thm) 
+    hc_xAxis(title=list(text="Départements")) %>%
+    hc_yAxis(title=list(text="Nombre de clubs sportifs")) %>%
+    hc_add_theme(thm) 
 
 ```
 
@@ -369,41 +379,28 @@ La Nièvre et le Jura fortement dotées en clubs par habitant.
 
 ```{r}
 
-hchart(clubdep %>% arrange(desc(txclub)),"bar", hcaes(x=reorder(departement,txclub),y=txclub,color=ifelse(dep %in% depbfc,"#6a5acd",
-                                                                 ifelse(dep=="FR","#ff7f50","#ffd700") ) ), 
-       showInLegend = T, name = "France", pointWidth = 1) %>%
+hchart(clubdep %>% arrange(desc(txclub)),"bar",
+       hcaes(x=reorder(departement,txclub),y=txclub,color=ifelse(dep %in% depbfc,"#6a5acd",
+                                                                 ifelse(dep=="FR","#ff7f50","#ffd700") ) ),
+          showInLegend = T, 
+          name = "Nombre de clubs", 
+          pointWidth = 1) %>%
   
-  hc_add_series(clubdep %>% filter(dep %in% depbfc | dep == "FR" ) %>% arrange(desc(txclub)),"bar", hcaes(x=reorder(departement,txclub),y=txclub,color=ifelse(dep %in% depbfc,"#6a5acd","#ffd700") ), 
-       showInLegend = T, name = "BFC", pointWidth = 1) %>%
+  hc_add_series(clubdep %>% filter(dep %in% depbfc | dep == "FR" ) %>% arrange(desc(txclub)),"bar", 
+                hcaes(x=reorder(departement,txclub),y=txclub,color=ifelse(dep %in% depbfc,"#6a5acd","#ff7f50") ),
+                  showInLegend = F, 
+                  name = "Nombre de clubs", 
+                  pointWidth = 1) %>%
   
-  hc_xAxis(title=list(text="Départements")) %>%
+    hc_legend(title=list(text=" France/BFC (Clic pour zoomer) " )) %>%
+
+    hc_xAxis(title=list(text="Départements")) %>%
     hc_yAxis(title=list(text="Taux de clubs sportifs")) %>%
-  hc_add_theme(thm) 
+    hc_add_theme(thm) 
 
 ```
 
 
-### Comparaisons infra régionales
-
-```{r}
-hchart(clubdep %>% filter(dep %in% depbfc) %>% arrange(desc(V1)),"bar", hcaes(x=reorder(departement,V1),y=V1,color=ifelse(dep %in% depbfc,"#6a5acd","#ffd700") ), 
-       showInLegend = F, name = "Clubs sportifs", pointWidth = 20) %>%
-  hc_xAxis(title=list(text="Départements")) %>%
-    hc_yAxis(title=list(text="Nombre de clubs")) %>%
-  hc_add_theme(thm) 
-```
-
-### Taux infra régionaux pour 10 000 habitants
-
-```{r}
-
-hchart(clubdep %>% filter(dep %in% depbfc) %>% arrange(desc(txclub)),"bar", hcaes(x=reorder(departement,txclub),y=txclub,color=ifelse(dep %in% depbfc,"#6a5acd","#ffd700") ), 
-       showInLegend = F, name = "Clubs sportifs", pointWidth = 20) %>%
-  hc_xAxis(title=list(text="Départements")) %>%
-    hc_yAxis(title=list(text="Taux de clubs")) %>%
-  hc_add_theme(thm) 
-
-```
 
 ### Carte départementale
 
