--- a/Lisez-moi.Rmd
+++ b/Lisez-moi.Rmd
@@ -5,16 +5,44 @@ date: "30/03/2022"
 output: html_document
 ---
 
+# Chiffres Clés Jeunesse Engagement et Sports de Bourgogne-Franche-Comté
+
+## Page du projet Chiffes Clés de la Délégation Régionale et Académique à la Jeunesse, à l'Engagement et aux Sports de Bourgogne-Franche-Comté (DRAJES BFC)
+
+## Origine
+
+Longtemps réalisés sous forme de livrets papiers à destinations des acteurs de la Jeunesse et du Sport, les chiffres clés JES font peau neuve sous la forme de pages en ligne, de tableaux mis en forme, de cartes dynamiques et d'infographies interactives. Cet ensemble de pages statiques vise à faciliter la connaissance de la région sur les thématiques de la Jeunesse, de la Vie Associative et de l'Engagement, du Sport.
+
+## Descritpion
+
+Les thématiques sont abordées sous l'angle territorial et proposent, le plus souvent, des comparaisons régionales, départementales et infra-départementales parfois. Chaque illustration et carte ont fait l'objet d'une réflexion particulière afin de lire immédiatement les messages principaux. Cependant, un grand nombre d'indicateurs ont été mis en forme pour compléter les analyses. La plupart des données sont open source, les autres sont fournies par la MEDES (mission études, données et enquêtes statistiques de l'Injep) qui se charge de produire les données pour le territoire national.
+
 ## Fonctionnement
 
-#### Pour consulter les chiffres clés depuis votre poste, téléchargez le fichier zip ou 7z ***\_site*** et décompressez le à l'endroit de votre choix. Ouvrez ensuite le fichier [**DRAJESBFC.html**]{.underline}, il fait le lien vers les autres documents du dossier (doit s'ouvrir dans un navigateur type Firefox).
-
-## Contenu
-
-Ce document se présente comme un site interactif et dynamique. Il balaie l'ensemble des thèmes de la DRAJES et propose des comparaisons régionales, départementales et infra-départementales lorsque cela est possible. Il s'appuie sur des bases de données open source et sur les données de cadrage fournies par la MEDES (mission études, données et enquêtes statistiques de l'Injep).
-
-Le bandeau du haut présente l'échelon territorial (région, département, EPCI et bassins de vie), et, selon les sujets, des pages supplémentaires. On y trouve également une rubrique « Pour en savoir plus » qui pointe vers d'autres sites externes et « Navigation » qui permet de changer de page sans passer par « Accueil ».
+La plupart des pages présentent un bandeau supérieur permettant de choisir l'échelon territorial (région, département, EPCI et bassins de vie), et, selon les sujets, des pages supplémentaires. On y trouve également une rubrique « En savoir +» qui pointe vers d'autres sites externes et à droite se trouve un renvoi à « Accueil » qui vous permettra de naviguer dans les différents thèmes.
 
 Dans chaque page, un bloc « Données générales » apporte quelques informations générales à retenir. Les autres blocs présentent les données selon un système d'onglets explicites : tableaux de données, graphiques de comparaisons et cartes. Les cartes sont dynamiques et cliquables, la plupart des graphiques également.
 
-Lors de votre navigation, vous pouvez faire remonter vos remarques ou tout problème de mise en page (faute de frappe, source illisible ou manquante, proposition d'amélioration...) sur mon mail : [pierre-stephane.lebre\@ac-dijon.fr](mailto:pierre-stephane.lebre@ac-dijon.fr){.email}
+## Maintenance et mises à jour
+
+Elles se font au fil de l'eau en fonction des disponibilités des données open source et de la charge de travail. Il ne saurait y avoir de roadmap pour l'instant.
+
+## Contributions
+
+Toute contribution ou proposition d'amélioration sera lue avec intérêt.
+
+Lors de votre navigation, vous pouvez faire remonter vos remarques ou tout problème de mise en page (faute de frappe, source illisible ou manquante, proposition d'amélioration...) sur mon mail : [pierre-stephane.lebre\@ac-dijon.fr](mailto:pierre-stephane.lebre@ac-dijon.fr)
+
+Vous pouvez également cloner le projet ou faire remonter vos remarques et propositions d'améliorations sur la boîte fonctionnelle [ce.drajes.observation\@region-academique-bourgogne-franche-comte.fr](mailto:ce.drajes.observation@region-academique-bourgogne-franche-comte.fr)
+
+<!-- -->
+
+    https://github.com/DRAJES/chiffres_cles.github.io.git
+
+## Auteur
+
+Ce site a été pensé, créé et alimenté par PS Lèbre, statisticien Insee pour la DRAJES BFC.
+
+## License
+
+Pas pour le moment...
