--- a/DRAJESBFC.Rmd
+++ b/DRAJESBFC.Rmd
@@ -6,7 +6,11 @@ output:
     toc: true
     toc_depth: 3
     toc_float: true
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
+
 ```{r setup, include=F ,echo=FALSE, cache=F}
 library(flexdashboard)
 library(gghighlight)
@@ -50,44 +54,106 @@ knitr::opts_chunk$set(
 )
 ```
 
+La Délégation Régionale Académique à la Jeunesse, à l'Engagement et aux
+Sports (**DRAJES**) anime et coordonne les politiques publiques **du
+sport**, de **la jeunesse**, de **la vie associative**, de
+**l'engagement civique** et de **l'éducation populaire**.
 
+Elle s'appuie pour cela sur les données de la
+[**MEDES**](https://injep.fr/linstitut/missions/mission-enquetes-donnees-et-etudes-statistiques-medes/)
+(Missions Enquêtes, Données et Etudes Statistiques) de
+[**l'Injep**](https://injep.fr/) (Institut national de la Jeunesse et de
+l'éducation Populaire). Ce Service Statistique Ministériel (**SSM**)
+fait partie du Service Statistique Public
+([**SSP**](https://www.insee.fr/fr/information/1302192)) chargé
+d'outiller les ministères sur leurs besoins d'études, d'enquêtes et de
+données. Porté par l'Insee, le SSP assure **l'indépendance**, la
+**fiabilité**, la **neutralité** et la **qualité** des données publiées.
 
-La Délégation Régionale Académique à la Jeunesse, à l'Engagement et aux Sports (**DRAJES**) anime et coordonne les politiques publiques **du sport**, de **la jeunesse**, de **la vie associative**, de **l'engagement civique** et de **l'éducation populaire**.
+------------------------------------------------------------------------
 
-Elle s'appuie pour cela sur les données de la **[MEDES](https://injep.fr/linstitut/missions/mission-enquetes-donnees-et-etudes-statistiques-medes/)** (Missions Enquêtes, Données et Etudes Statistiques) de **[l'Injep](https://injep.fr/)** (Institut national de la Jeunesse et de l'éducation Populaire). Ce Service Statistique Ministériel (**SSM**) fait partie du Service Statistique Public (**[SSP](https://www.insee.fr/fr/information/1302192)**) chargé d'outiller les ministères sur leurs besoins d'études, d'enquêtes et de données. Porté par l'Insee, le SSP assure **l'indépendance**, la **fiabilité**, la **neutralité** et la **qualité** des données publiées.
+## 1. **Généralités**
 
+### 1.1 [Territoire(s)](1.1_demo.html)
 
----------------
+Population / Communes / Densité / ZRR / QPV / Appartenance géographique
+/ CRTE
 
-## 1. **Généralités**  
-###  1.1 [Territoire(s)](1.1_demo.html)  
-###  1.2 [Structure de la population](1.2_structure.html)  
-###  1.3 [Évolution de la population](1.3_evol.html)  
+### 1.2 [Structure de la population](1.2_structure.html)
 
----------------
+15-29 ans / + de 65 ans / indice de jeunesse
 
-## 2. **Jeunesse**   
-###  2.1 [Jeunesse](2.1_jeunesse.html)   
-###  2.2 [Préscolaire](2.2_presco.html)  
-###  2.3 [Accueils collectifs de mineurs](2.3_ACM.html)    
+###  1.3 [Évolution de la population](1.3_evol.html)
 
---------------- 
+évolution sur 5 ans par tranche d'âge / tendance longue
 
-## 3. **Engagement**   
-###  3.1 [Vie associative](3.1_VA.html)   
-###  3.2 [Service civique](3.2_SC.html)   
+------------------------------------------------------------------------
 
----------------
+## 2. **Jeunesse**
 
-## 4. **Formation**   
-###  4.1 [Diplômes](4.1_diplomes.html)   
-###  4.2 [Organismes de formation](4.2_OF3.html)
-  
----------------
+### 2.1 [Jeunesse](2.1_jeunesse.html)
 
-## 5. **Sport**    
-###  5.1 [Clubs sportifs](5.1_clubs.html)  
-###  5.2 [Licences sportives](5.2_licences.html)  
-###  5.3 [Sport de nature](5.3_nature.html)  
-###  5.4 [Piscines](5.4_piscines.html)  
-###  5.5 [Équipements sportifs](5.5_RES.html)  
+15-29 ans / 16-25 ans / évolution
+
+### 2.2 [Préscolaire](2.2_presco.html)
+
+Accueils collectifs / accueil familial / taux de scolarisation /
+Assistantes maternelles / garde d'enfants à domicile
+
+### 2.3 [Accueils collectifs de mineurs](2.3_ACM.html)
+
+Avec hébergement / Sans hébergement / Scoutisme / lieux d'accueil /
+places par groupe d'âge
+
+------------------------------------------------------------------------
+
+## 3. **Engagement**
+
+### 3.1 [Vie associative](3.1_VA.html)
+
+Nombre et taux d'association / Domaine d'intervention
+
+### 3.2 [Service civique](3.2_SC.html)
+
+Nombre et évolution / domaine de mission / âge, diplôme, emploi /
+missions à l'étranger / QPV
+
+------------------------------------------------------------------------
+
+## 4. **Formation**
+
+### 4.1 [Diplômes](4.1_diplomes.html)
+
+Diplômes délivrés / par sexe, par âge / BAFA/BAFD / Insertion des
+diplômés
+
+### 4.2 [Organismes de formation](4.2_OF3.html)
+
+Carte interactive des OF de la région
+
+------------------------------------------------------------------------
+
+## 5. **Sport**
+
+### 5.1 [Clubs sportifs](5.1_clubs.html)
+
+Taux par fédération, structure / Poids des fédération et détail
+
+### 5.2 [Licences sportives](5.2_licences.html)
+
+Taux par fédération, structure, évolution / Poids des fédération et
+détail / Taux de licences féminines
+
+### 5.3 [Sport de nature](5.3_nature.html)
+
+Sites et cartographie (cluster) par famille d'équipement sport de nature
+
+### 5.4 [Piscines](5.4_piscines.html)
+
+Bassins publics, couverts, saisonniers / Surface natatoire / Temps
+d'accès
+
+### 5.5 [Équipements sportifs](5.5_RES.html)
+
+équipements et taux d'équipements par grande famille / Détail des
+équipements (couverts, proximité) / Analyse de carence
