--- a/DRAJESBFC.Rmd
+++ b/DRAJESBFC.Rmd
@@ -76,16 +76,21 @@ données. Porté par l'Insee, le SSP assure **l'indépendance**, la
 
 ### 1.1 [Territoire(s)](1.1_demo.html)
 
-Population / Communes / Densité / ZRR / QPV / Appartenance géographique
-/ CRTE
+-   Population, communes, densité
+
+-   Appartenance géographique : ZRR, QPV, CRTE
 
 ### 1.2 [Structure de la population](1.2_structure.html)
 
-15-29 ans / + de 65 ans / indice de jeunesse
+-   15-29 ans / + de 65 ans
 
-###  1.3 [Évolution de la population](1.3_evol.html)
+-   Indice de jeunesse
 
-évolution sur 5 ans par tranche d'âge / tendance longue
+### 1.3 [Évolution de la population](1.3_evol.html)
+
+-   Sur 5 ans par tranche d'âge
+
+-   Tendance longue
 
 ------------------------------------------------------------------------
 
@@ -93,17 +98,23 @@ Population / Communes / Densité / ZRR / QPV / Appartenance géographique
 
 ### 2.1 [Jeunesse](2.1_jeunesse.html)
 
-15-29 ans / 16-25 ans / évolution
+-   15-29 ans / 16-25 ans
+
+-   évolution sur 5 ans
 
 ### 2.2 [Préscolaire](2.2_presco.html)
 
-Accueils collectifs / accueil familial / taux de scolarisation /
-Assistantes maternelles / garde d'enfants à domicile
+-   Accueil collectif / familial
+
+-   Taux de scolarisation
+
+-   Assistantes maternelles et garde d'enfants à domicile
 
 ### 2.3 [Accueils collectifs de mineurs](2.3_ACM.html)
 
-Avec hébergement / Sans hébergement / Scoutisme / lieux d'accueil /
-places par groupe d'âge
+-   Avec hébergement / Sans hébergement / Scoutisme
+
+-   Lieux d'accueil et places par groupe d'âge
 
 ------------------------------------------------------------------------
 
@@ -111,12 +122,19 @@ places par groupe d'âge
 
 ### 3.1 [Vie associative](3.1_VA.html)
 
-Nombre et taux d'association / Domaine d'intervention
+-   Nombre d'associations et taux
+
+-   Domaine d'intervention
 
 ### 3.2 [Service civique](3.2_SC.html)
 
-Nombre et évolution / domaine de mission / âge, diplôme, emploi /
-missions à l'étranger / QPV
+-   Nombre et évolution, domaine de mission
+
+-   âge, sexe, diplôme, emploi
+
+-   Missions à l'étranger
+
+-   Volontaires issus de QPV
 
 ------------------------------------------------------------------------
 
@@ -124,12 +142,15 @@ missions à l'étranger / QPV
 
 ### 4.1 [Diplômes](4.1_diplomes.html)
 
-Diplômes délivrés / par sexe, par âge / BAFA/BAFD / Insertion des
-diplômés
+-   Diplômes délivrés par sexe et âge
+
+-   BAFA / BAFD
+
+-   Insertion des diplômés
 
 ### 4.2 [Organismes de formation](4.2_OF3.html)
 
-Carte interactive des OF de la région
+-   Carte interactive des OF de la région
 
 ------------------------------------------------------------------------
 
@@ -137,23 +158,38 @@ Carte interactive des OF de la région
 
 ### 5.1 [Clubs sportifs](5.1_clubs.html)
 
-Taux par fédération, structure / Poids des fédération et détail
+-   Taux de clubs par fédération, structure
+
+-   Poids des fédération et détail
+
+-   Licences par club
 
 ### 5.2 [Licences sportives](5.2_licences.html)
 
-Taux par fédération, structure, évolution / Poids des fédération et
-détail / Taux de licences féminines
+-   Taux par fédération et par sexe, structure et évolution
+
+-   Poids des fédération et détail
+
+-   Taux de licences féminines et sports sexués
 
 ### 5.3 [Sport de nature](5.3_nature.html)
 
-Sites et cartographie (cluster) par famille d'équipement sport de nature
+-   Sites de sport nature par famille et détail
+
+-   cartographie détaillée et par cluster
 
 ### 5.4 [Piscines](5.4_piscines.html)
 
-Bassins publics, couverts, saisonniers / Surface natatoire / Temps
-d'accès
+-   Bassins publics, couverts, saisonniers
+
+-   Surface natatoire
+
+-   Temps d'accès aux bassins
 
 ### 5.5 [Équipements sportifs](5.5_RES.html)
 
-équipements et taux d'équipements par grande famille / Détail des
-équipements (couverts, proximité) / Analyse de carence
+-   équipements et taux d'équipements par grande famille
+
+-   Détail des équipements (couverts, proximité)
+
+-   Analyse des carences par territoire
