--- a/3.2_SC.Rmd
+++ b/3.2_SC.Rmd
@@ -231,7 +231,7 @@ cartedep <- basebfcsig %>%filter(depvol %in% depbfc) %>%
               "04 - Embauche en CDD d'au moins 6 mois ou CDI ",
               "05 - Embauche en CDD moins de 6 mois")/rupture ),1)
   ) %>%
-  left_join(.,basecomQPV %>% filter(DEP %in% depbfc) %>% group_by(DEP) %>% summarise(pop=sum(pop),popQPV=sum(POP_MUN),pop1625=sum(p1625)) %>% adorn_totals(name="BFC"),by="DEP") %>%
+  left_join(.,basecomQPV %>% filter(DEP %in% depbfc) %>% group_by(DEP) %>% summarise(pop=sum(pop),popQPV=sum(popMuniQPV,na.rm=T),pop1625=sum(p1625)) %>% adorn_totals(name="BFC"),by="DEP") %>%
   mutate(txQPV=round(100*popQPV/pop,1), partvol=1000*tot20/pop, txvol=round( 100*tot20/pop1625,2), 
          txvolqpv=1000*qpv/popQPV, tx= round(100*qpv/tot20,1) ) %>%
   left_join(.,appartenance %>% filter(NIVGEO=="DEP") %>% select(CODGEO,département=LIBGEO),by=c("DEP"="CODGEO") ) %>% rename(INSEE_DEP=DEP,`Volontaires 2020`=tot20,`Taux de volontaires parmi les 16-25 ans`=txvol)
@@ -403,7 +403,7 @@ basebfcsig %>%filter(depvol %in% depbfc) %>%
   group_by(DEP=depvol) %>%
   summarise(tot=n(),tot20=sum(debut==2020),qpv=sum(!(CODE_QUARTIER=="") & debut==2020) ) %>%
   adorn_totals(name="BFC") %>%
-  left_join(.,basecomQPV %>% filter(DEP %in% depbfc) %>% group_by(DEP) %>% summarise(pop=sum(pop),popQPV=sum(POP_MUN),pop1625=sum(p1625)) %>% adorn_totals(name="BFC"),by="DEP") %>%
+  left_join(.,basecomQPV %>% filter(DEP %in% depbfc) %>% group_by(DEP) %>% summarise(pop=sum(pop),popQPV=sum(popMuniQPV,na.rm=T),pop1625=sum(p1625)) %>% adorn_totals(name="BFC"),by="DEP") %>%
   mutate(txQPV=100*popQPV/pop,partvol=1000*tot20/pop,txvol=100*tot20/pop1625,txvolqpv=1000*qpv/popQPV, tx= 100*qpv/tot20 ) %>%
   left_join(.,appartenance %>% filter(NIVGEO=="DEP") %>% select(CODGEO,département=LIBGEO),by=c("DEP"="CODGEO") ) %>%  
   select(DEP,département,`volontaires`=tot20,`volontaires issus de QPV`=tx,`Pop en QPV`=txQPV,`Taux de volontaires parmi les 16-25 ans`=txvol) %>%
