--- a/5.3_nature.Rmd
+++ b/5.3_nature.Rmd
@@ -16,45 +16,45 @@ load("data/sport/RES.RData")
 
 
 icons <- awesomeIconList (
-  "407" = makeAwesomeIcon(text =  fa("truck-monster"),markerColor ="darkred",iconColor="#FF0000",squareMarker=F),
+  "407" = makeAwesomeIcon(text = fa("truck-monster"),markerColor="darkred",iconColor="#FF0000",squareMarker=F),
   
   "3001" = makeAwesomeIcon(text =  fa("mountain"),iconColor="#2F4F4F",markerColor ="lightgreen"), 
   "3003" = makeAwesomeIcon(text =  fa("child"),iconColor="#2F4F4F",markerColor ="lightgreen"),
-  "3004" = makeAwesomeIcon(text  =  fa("walking"),iconColor="#6B8E23",markerColor ="lightgreen")  ,
-  "3005" = makeAwesomeIcon(text =  fa("map-signs"),iconColor="#6B8E23",markerColor ="lightgreen")  ,
+  "3004" = makeAwesomeIcon(text  =  fa("person-walking"),iconColor="#6B8E23",markerColor ="lightgreen")  ,
+  "3005" = makeAwesomeIcon(text =  fa("signs-post"),iconColor="#6B8E23",markerColor ="lightgreen")  ,
   "3007" = makeAwesomeIcon(text =  fa("mountain"),iconColor="#2F4F4F",markerColor ="lightgreen"), 
   "3008" = makeAwesomeIcon(text =  fa("icicles"),iconColor="#696969",markerColor ="lightgreen"),
   "3010" = makeAwesomeIcon(text =  fa("mountain"),iconColor="#2F4F4F",markerColor ="lightgreen"), 
   "3011" = makeAwesomeIcon(text =  fa("mountain"),iconColor="#0000ff",markerColor ="lightgreen")  ,
-  "3012" = makeAwesomeIcon(text =  fa("hiking"),iconColor="#228B22",markerColor ="lightgreen")  ,
+  "3012" = makeAwesomeIcon(text =  fa("person-hiking"),iconColor="#228B22",markerColor ="lightgreen")  ,
   "3014" = makeAwesomeIcon(text =  fa("child"),iconColor="#2F4F4F",markerColor ="lightgreen"),
   "3015" = makeAwesomeIcon(text =  fa("icicles"),iconColor="#696969",markerColor ="lightgreen"),
   
-  "701" = makeAwesomeIcon(text =  fa("skiing"),iconColor="#778899",markerColor ="white"),
-  "703" = makeAwesomeIcon(text =  fa("skiing"),iconColor="#696969",markerColor ="white"),
-  "705" = makeAwesomeIcon(text =  fa("skiing-nordic"),iconColor="#708090",markerColor ="white"),
-  "706" = makeAwesomeIcon(text =  fa("skiing"),iconColor="#696969",markerColor ="white"),
+  "701" = makeAwesomeIcon(text =  fa("person-skiing"),iconColor="#778899",markerColor ="white"),
+  "703" = makeAwesomeIcon(text =  fa("person-skiing"),iconColor="#696969",markerColor ="white"),
+  "705" = makeAwesomeIcon(text =  fa("person-skiing-nordic"),iconColor="#708090",markerColor ="white"),
+  "706" = makeAwesomeIcon(text =  fa("person-skiing"),iconColor="#696969",markerColor ="white"),
   
-  "603" = makeAwesomeIcon(text =  fa("biking"),iconColor="#6A5ACD",markerColor ="orange"),
-  "604" = makeAwesomeIcon(text =  fa("biking"),iconColor="#6A5ACD",markerColor ="orange"),
-  "605" = makeAwesomeIcon(text =  fa("biking"),iconColor="#6A5ACD",markerColor ="orange"),
-  "606" = makeAwesomeIcon(text =  fa("biking"),iconColor="#6A5ACD",markerColor ="orange"),
+  "603" = makeAwesomeIcon(text =  fa("person-biking"),iconColor="#6A5ACD",markerColor ="orange"),
+  "604" = makeAwesomeIcon(text =  fa("person-biking"),iconColor="#6A5ACD",markerColor ="orange"),
+  "605" = makeAwesomeIcon(text =  fa("person-biking"),iconColor="#6A5ACD",markerColor ="orange"),
+  "606" = makeAwesomeIcon(text =  fa("person-biking"),iconColor="#6A5ACD",markerColor ="orange"),
   
   "906" = makeAwesomeIcon(text =  fa("horse"),iconColor="#F4A460",markerColor ="black"),
   "909" = makeAwesomeIcon(text =  fa("horse"),iconColor="#F4A460",markerColor ="black"),
   
-  "2401" = makeAwesomeIcon(text =  fa("swimmer"),iconColor="#4169E1",markerColor ="lightblue"),
-  "2402" = makeAwesomeIcon(text =  fa("swimmer"),iconColor="#4169E1",markerColor ="lightblue"),
-  "2403" = makeAwesomeIcon(text =  fa("swimmer"),iconColor="#4169E1",markerColor ="lightblue"),
-  "2404" = makeAwesomeIcon(text =  fa("swimmer"),iconColor="#4169E1",markerColor ="lightblue"),
-  "2405" = makeAwesomeIcon(text =  fa("swimmer"),iconColor="#4169E1",markerColor ="lightblue"),
-  "2406" = makeAwesomeIcon(text =  fa("swimmer"),iconColor="#4169E1",markerColor ="lightblue"),
-  "2407" = makeAwesomeIcon(text =  fa("swimmer"),iconColor="#4169E1",markerColor ="lightblue"),
-  "2408" = makeAwesomeIcon(text =  fa("swimmer"),iconColor="#4169E1",markerColor ="lightblue"),
-  "2409" = makeAwesomeIcon(text =  fa("swimmer"),iconColor="#4169E1",markerColor ="lightblue"),
-  "2410" = makeAwesomeIcon(text =  fa("swimmer"),iconColor="#4169E1",markerColor ="lightblue"),
-  "2414" = makeAwesomeIcon(text =  fa("swimmer"),iconColor="#4169E1",markerColor ="lightblue"),
-  "2416" = makeAwesomeIcon(text =  fa("swimmer"),iconColor="#4169E1",markerColor ="lightblue"),
+  "2401" = makeAwesomeIcon(text =  fa("person-swimming"),iconColor="#4169E1",markerColor ="lightblue"),
+  "2402" = makeAwesomeIcon(text =  fa("person-swimming"),iconColor="#4169E1",markerColor ="lightblue"),
+  "2403" = makeAwesomeIcon(text =  fa("person-swimming"),iconColor="#4169E1",markerColor ="lightblue"),
+  "2404" = makeAwesomeIcon(text =  fa("person-swimming"),iconColor="#4169E1",markerColor ="lightblue"),
+  "2405" = makeAwesomeIcon(text =  fa("person-swimming"),iconColor="#4169E1",markerColor ="lightblue"),
+  "2406" = makeAwesomeIcon(text =  fa("person-swimming"),iconColor="#4169E1",markerColor ="lightblue"),
+  "2407" = makeAwesomeIcon(text =  fa("person-swimming"),iconColor="#4169E1",markerColor ="lightblue"),
+  "2408" = makeAwesomeIcon(text =  fa("person-swimming"),iconColor="#4169E1",markerColor ="lightblue"),
+  "2409" = makeAwesomeIcon(text =  fa("person-swimming"),iconColor="#4169E1",markerColor ="lightblue"),
+  "2410" = makeAwesomeIcon(text =  fa("person-swimming"),iconColor="#4169E1",markerColor ="lightblue"),
+  "2414" = makeAwesomeIcon(text =  fa("person-swimming"),iconColor="#4169E1",markerColor ="lightblue"),
+  "2416" = makeAwesomeIcon(text =  fa("person-swimming"),iconColor="#4169E1",markerColor ="lightblue"),
   "2417" = makeAwesomeIcon(text =  fa("anchor"),iconColor="#0000CD",markerColor ="lightblue"),
   "2418" = makeAwesomeIcon(text =  fa("anchor"),iconColor="#0000CD",markerColor ="lightblue"),
   "2419" = makeAwesomeIcon(text =  fa("water"),iconColor="#4169E1",markerColor ="lightblue"),
